@@ -1,3 +1,14 @@
+2018-08-16  Ross Kirsling  <ross.kirsling@sony.com>
+
+        REGRESSION(r234930): Don't embed a #if in an ASSERT
+        https://bugs.webkit.org/show_bug.cgi?id=188680
+
+        Reviewed by Tim Horton.
+
+        * page/EventHandler.cpp:
+        (WebCore::EventHandler::handleDrag):
+        Simplify the ASSERT -- it seems we just want to know that DragSourceActionSelection and exactly one other DragSourceAction is set. 
+
 2018-08-16  Alex Christensen  <achristensen@webkit.org>
 
         Remove unused allowScriptsToCloseWindows setting
